# flota

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  README.md  generate_test_data_2_full.sh  generate_test_data_2_limited.sh  generate_test_data_3_full.sh  pyproject.toml  run_generate_test_data_2_full.sh  run_generate_test_data_3_full.sh
.github/workflows/: ci.yml
data/: 10kgnad_limited_dev.csv  10kgnad_limited_test.csv  10kgnad_limited_train.csv  10kgnad_small_dev.csv  10kgnad_small_test.csv  10kgnad_small_train.csv
data/labels/: 10kgnad_formatted_limited_labels.txt
flota/: __init__.py  __main__.py  backend.py  cache_info.py  cli.py  enums.py  exceptions.py  flota_dp.py  main.py  server.py  tokenizer.py
flota/utils/: __init__.py  data.py  training.py
scripts/: run_base.sh  run_first.sh  run_flota-dp-back.sh  run_flota-dp-front.sh  run_flota-dp.sh  run_flota.sh  run_longest.sh  run_matrix.sh  run_noise.sh
src/: flota.py  generate_test_data.py
tests/: cli_test.py  flota_tokenizer_generated_test.py  flota_tokenizer_original_test.py  flota_tokenizer_test.py
tests/flota_tokenizer_generated_test/input/tokenize/: maths.txt  physics.txt
tests/flota_tokenizer_generated_test/output/tokenize/: bert-base-uncased_flota-dp-back_0_cs.pkl  bert-base-uncased_flota-dp-back_0_physics.pkl  bert-base-uncased_flota-dp-back_1_maths.pkl  bert-base-uncased_flota-dp-back_1_physics.pkl  bert-base-uncased_flota-dp-back_2_cs.pkl  bert-base-uncased_flota-dp-back_2_maths.json  bert-base-uncased_flota-dp-back_2_physics.json  bert-base-uncased_flota-dp-back_2_physics.pkl  bert-base-uncased_flota-dp-back_3_maths.json  bert-base-uncased_flota-dp-back_3_maths.pkl  bert-base-uncased_flota-dp-back_3_physics.json  bert-base-uncased_flota-dp-back_4_cs.pkl  bert-base-uncased_flota-dp-front_0_cs.json  bert-base-uncased_flota-dp-front_0_maths.json  bert-base-uncased_flota-dp-front_0_physics.json  bert-base-uncased_flota-dp-front_1_cs.json  bert-base-uncased_flota-dp-front_1_maths.pkl  bert-base-uncased_flota-dp-front_2_cs.json  bert-base-uncased_flota-dp-front_2_maths.json  bert-base-uncased_flota-dp-front_2_physics.pkl  bert-base-uncased_flota-dp-front_3_cs.pkl  bert-base-uncased_flota-dp-front_3_maths.json  bert-base-uncased_flota-dp-front_3_maths.pkl  bert-base-uncased_flota-dp-front_4_maths.json  bert-base-uncased_flota-dp-front_4_maths.pkl  bert-base-uncased_flota-dp-front_4_physics.json  bert-base-uncased_flota-dp-front_4_physics.pkl  bert-base-uncased_flota-dp_maths.json  bert-base-uncased_flota-dp_physics.json  distilbert-base-uncased_flota-dp-back_1_cs.json  distilbert-base-uncased_flota-dp-back_1_cs.pkl  distilbert-base-uncased_flota-dp-back_1_maths.json  distilbert-base-uncased_flota-dp-back_1_physics.json  distilbert-base-uncased_flota-dp-back_2_cs.json  distilbert-base-uncased_flota-dp-back_2_maths.pkl  distilbert-base-uncased_flota-dp-back_3_cs.json  distilbert-base-uncased_flota-dp-back_3_cs.pkl  distilbert-base-uncased_flota-dp-back_3_physics.pkl  distilbert-base-uncased_flota-dp-back_4_cs.json  distilbert-base-uncased_flota-dp-back_4_maths.json  (+115 more)
tests/flota_tokenizer_original_test/input/call/: cs.json  cs.pkl  maths.json  maths.pkl  physics.json  physics.pkl
tests/flota_tokenizer_original_test/input/encode/: cs.txt  maths.txt  physics.txt
tests/flota_tokenizer_original_test/input/tokenize/: cs.txt
tests/flota_tokenizer_original_test/output/call/: bert-base-cased_first_1_cs.pkl  bert-base-cased_first_1_cs.pt  bert-base-cased_first_1_maths.pkl  bert-base-cased_first_1_maths.pt  bert-base-cased_first_1_physics.pkl  bert-base-cased_first_1_physics.pt  bert-base-cased_first_1_strict_cs.pkl  bert-base-cased_first_1_strict_cs.pt  bert-base-cased_first_1_strict_maths.pkl  bert-base-cased_first_1_strict_maths.pt  bert-base-cased_first_1_strict_physics.pkl  bert-base-cased_first_1_strict_physics.pt  bert-base-cased_first_2_cs.pkl  bert-base-cased_first_2_cs.pt  bert-base-cased_first_2_maths.pkl  bert-base-cased_first_2_maths.pt  bert-base-cased_first_2_physics.pkl  bert-base-cased_first_2_physics.pt  bert-base-cased_first_2_strict_cs.pkl  bert-base-cased_first_2_strict_cs.pt  bert-base-cased_first_2_strict_maths.pkl  bert-base-cased_first_2_strict_maths.pt  bert-base-cased_first_2_strict_physics.pkl  bert-base-cased_first_2_strict_physics.pt  bert-base-cased_first_3_cs.pkl  bert-base-cased_first_3_cs.pt  bert-base-cased_first_3_maths.pkl  bert-base-cased_first_3_maths.pt  bert-base-cased_first_3_physics.pkl  bert-base-cased_first_3_physics.pt  bert-base-cased_first_3_strict_cs.pkl  bert-base-cased_first_3_strict_cs.pt  bert-base-cased_first_3_strict_maths.pkl  bert-base-cased_first_3_strict_maths.pt  bert-base-cased_first_3_strict_physics.pkl  bert-base-cased_first_3_strict_physics.pt  bert-base-cased_first_4_cs.pkl  bert-base-cased_first_4_cs.pt  bert-base-cased_first_4_maths.pkl  bert-base-cased_first_4_maths.pt  (+392 more)
tests/flota_tokenizer_original_test/output/encode/: bert-base-cased_first_1_cs.json  bert-base-cased_first_1_strict_cs.pkl  bert-base-cased_first_1_strict_maths.json  bert-base-cased_first_1_strict_maths.pkl  bert-base-cased_first_1_strict_physics.json  bert-base-cased_first_1_strict_physics.pkl  bert-base-cased_first_2_cs.pkl  bert-base-cased_first_2_maths.json  bert-base-cased_first_2_strict_cs.json  bert-base-cased_first_2_strict_maths.pkl  bert-base-cased_first_2_strict_physics.json  bert-base-cased_first_2_strict_physics.pkl  bert-base-cased_first_3_maths.json  bert-base-cased_first_3_maths.pkl  bert-base-cased_first_3_physics.json  bert-base-cased_first_3_physics.pkl  bert-base-cased_first_3_strict_cs.json  bert-base-cased_first_3_strict_cs.pkl  bert-base-cased_first_4_maths.json  bert-base-cased_first_4_maths.pkl  bert-base-cased_first_4_physics.json  bert-base-cased_first_4_strict_cs.json  bert-base-cased_first_4_strict_cs.pkl  bert-base-cased_first_4_strict_physics.pkl  (+308 more)
tests/utils/: file_based_test.py
vocabs/: prefixes_de.p  prefixes_de.txt  prefixes_en.p  prefixes_en.txt  suffixes_de.p  suffixes_de.txt  suffixes_en.p  suffixes_en.txt
(+336 files in other folders)
