[tool.poetry]
name = "flota"
version = "0.0.7"
description = ""
authors = ["Valentin Hofmann"]
maintainers = [
  "Jannik Schaefer <jannik-schaefer@inbox-online.de>",
  "Cedric Gaberle <cedric.gaberle@web.de>",
]
license = "MIT"
readme = "README.md"
packages = [{ include = "flota" }]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.26.0"
torch = "^1.13.0"
pandas = "^1.5.0"
numpy = "^1.24.0"
scikit-learn = "^1.2.0"
tqdm = "^4.64.0"
fastapi = { version = "^0.92.0", optional = true }
uvicorn = { version = "^0.20.0", optional = true }
typer = { extras = ["all"], version = "^0.7.0" }

[tool.poetry.extras]
backend = ["typing", "fastapi", "uvicorn"]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.0"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
typer = "^0.7.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.0"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
typer = "^0.7.0"
black = "^23.1.0"
ruff = "^0.0.252"
vulture = "^2.7.0"
mypy = "^1.1.1"

[tool.poetry.scripts]
flota = "flota.main:cli"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-n auto --doctest-modules"

[tool.coverage.report]
exclude_lines = ["if (typing\\.)?TYPE_CHECKING:"]

[tool.mypy]
ignore_missing_imports = true

[tool.vulture]
make_whitelist = true
min_confidence = 100
paths = ["flota"]
sort_by_size = true

[tool.ruff]
line-length = 88
select = ["ALL"]
target-version = "py310"
ignore = [
  "ANN101", # flake8-annotations: missing-type-self
  "ANN102", # flake8-annotations: missing-type-cls
  "COM812", # flake8-commas: trailing-comma-on-bare-tuple-prohibited
]
unfixable = [
  "T201",   # flake8-print: print-found
  "ERA001", # eradicate: commented-out-code
  "F401",   # Pyflakes: unused-import
  "F841",   # Pyflakes: unused-variable
]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"__init__.py" = ["D104", "F401"]
"__main__.py" = ["D100"]
"tests/*.py" = ["S101"]
"cli.py" = ["T201", "B008"]
"server.py" = ["B008"]
